--- a/style.css
+++ b/style.css
@@ -355,3 +355,194 @@ header .container {
     text-align: center;
   }
 }
+
+.resume_container {
+  grid-template-columns: 1fr 5fr;
+}
+
+.resume_tabs ul {
+  position: sticky;
+  top: 150px;
+  position: -webkit-sticky;
+}
+
+.resume_tabs ul li a {
+  font-weight: 700;
+  margin-bottom: 10px;
+  display: block;
+  position: relative;
+  transition: 0.3s;
+}
+
+.resume_tabs ul li a.current {
+  color: var(--main-color);
+  margin-left: 20px;
+  position: relative;
+}
+
+.resume_tabs ul li a.current::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: -35px;
+  transform: translateX(-50%);
+  width: 30px;
+  height: 2px;
+  background-color: var(--main-color);
+}
+
+.page {
+  margin-bottom: 70px;
+}
+
+.page_heading {
+  font-size: 25px;
+  font-weight: 600;
+  color: var(--title-color);
+  margin-bottom: 25px;
+}
+
+.resume_wrap {
+  background-color: #faf9ff;
+  margin-bottom: 15px;
+  padding: 40px 30px;
+  display: flex;
+  position: relative;
+  border-radius: 10px;
+  transition: 0.3s;
+}
+
+.resume_wrap-icon {
+  background-color: var(--main-color);
+  width: 120px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.resume_wrap-icon i {
+  font-size: 25px;
+  color: #fff;
+}
+
+.resume_content {
+  width: calc(100% - 100px);
+  padding: 0 0 10px 10px;
+}
+
+.resume_wrap .date {
+  font-weight: 600;
+}
+
+.resume_wrap-content h4 {
+  font-size: 20px;
+  color: var(--title-color);
+}
+
+.resume_wrap-content .position {
+  color: var(--subtitle-color);
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.resume_wrap-content p {
+  color: var(--subtitle-color);
+  font-size: 14px;
+  margin-top: 15px;
+}
+
+.resume_wrap:hover {
+  background-color: var(--main-color);
+  color: #faf9ff;
+}
+
+.resume_wrap:hover .resume_wrap-icon {
+  background-color: #fff;
+}
+
+.resume_wrap:hover .resume_wrap-icon i {
+  color: var(--main-color);
+}
+
+.resume_wrap:hover h4,
+.resume_wrap:hover span,
+.resume_wrap:hover p {
+  color: #fff;
+}
+
+.progressBox {
+  gap: 3rem;
+  margin: 7px 0;
+}
+
+.progress_name {
+  display: flex;
+  justify-content: space-between;
+  font-weight: 500;
+  color: var(--title-color);
+  margin-bottom: 10px;
+}
+
+.progress {
+  width: 100%;
+  height: 7px;
+  border-radius: 10px;
+  background-origin: var(--seconde-color);
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+}
+
+.progress_bar {
+  height: 100%;
+  border-radius: 10px;
+  background-color: var(--main-color);
+  position: relative;
+}
+
+.progress_bar::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: calc(100% - 7px);
+  transform: translateY(-50%);
+  height: 15px;
+  width: 15px;
+  background-color: var(--main-color);
+  border-radius: 50%;
+}
+
+@media screen and (max-width: 992px) {
+  .resume_container {
+    grid-template-columns: 1fr;
+  }
+
+  .resume_tabs {
+    display: none;
+  }
+
+  .resume_wrap {
+    padding: 20px 15px;
+  }
+}
+
+@media screen and (max-width: 576) {
+  .resume_wrap {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .resume_wrap .resume_wrap-icon {
+    margin-bottom: 15px;
+  }
+
+  .resume_wrap-content {
+    width: 100%;
+  }
+
+  .progressBoxs {
+    grid-template-columns: 1fr;
+  }
+}
