--- a/style.css
+++ b/style.css
@@ -546,3 +546,131 @@ header .container {
     grid-template-columns: 1fr;
   }
 }
+
+.portfolio_filters {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 10px;
+  margin-bottom: 70px;
+}
+
+.portfolio_filters li {
+  font-size: 15px;
+  padding: 5px 15px;
+  cursor: pointer;
+}
+
+.portfolio_filters li:hover,
+.filter-active {
+  background-color: var(--main-color);
+  color: #fff;
+  border-radius: 50px;
+}
+
+.portfolio_wrap-container {
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: repeat(3, 1fr);
+  position: relative;
+}
+
+.portfolio_item {
+  border-radius: 10px;
+}
+
+.portfolio_wrap {
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.portfolio_wrap img {
+  border-radius: 10px;
+  height: 100%;
+}
+
+.portfolio_wrap::before {
+  content: "";
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  border-top: 3px solid rgba(0, 0, 0, 0.1);
+  border-left: 3px solid rgba(0, 0, 0, 0.1);
+  transition: 0.4s;
+  transform: scale(0);
+}
+
+.portfolio_wrap::after {
+  content: "";
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  border-bottom: 3px solid rgba(0, 0, 0, 0.1);
+  border-right: 3px solid rgba(0, 0, 0, 0.1);
+  transition: 0.4s;
+  transform: scale(0);
+}
+
+.portfolio_wrap:hover::before,
+.portfolio_wrap:hover::after {
+  transform: scale(1);
+}
+
+.portfolio_info {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  row-gap: 10px;
+  background-color: rgba(255, 255, 255, 0.5);
+  transform: scale(0);
+  transition: 0.4s;
+  color: #333;
+}
+
+.portfolio_wrap:hover .portfolio_info {
+  transform: scale(1);
+}
+
+.portfolio_info h4 {
+  font-size: 24px;
+  color: #333;
+  font-weight: 500;
+}
+
+.portfolio_info p {
+  text-transform: uppercase;
+}
+
+.portfolio_links a {
+  font-size: 28px;
+  color: #333;
+}
+
+@media screen and (max-width: 992px) {
+  .portfolio_wrap-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .portfolio_wrap-container {
+    grid-template-columns: 1fr;
+  }
+
+  .portfolio_filters li {
+    font-size: 16px;
+  }
+}
