--- a/style.css
+++ b/style.css
@@ -451,7 +451,7 @@ header .container {
 }
 
 .resume_wrap {
-  background-color: #faf9ff;
+  background-color: #637bafc9;
   margin-bottom: 15px;
   padding: 40px 30px;
   display: flex;
@@ -460,24 +460,10 @@ header .container {
   transition: 0.3s;
 }
 
-.resume_wrap-icon {
-  background-color: var(--main-color);
-  width: 120px;
-  height: 50px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.resume_wrap-icon i {
-  font-size: 25px;
-  color: #fff;
-}
-
 .resume_content {
   width: calc(100% - 100px);
   padding: 0 0 10px 10px;
+  color: white;
 }
 
 .resume_wrap .date {
@@ -485,39 +471,17 @@ header .container {
 }
 
 .resume_wrap-content h4 {
+  margin: 5px 0 12px 0;
   font-size: 20px;
-  color: var(--title-color);
-}
-
-.resume_wrap-content .position {
-  color: var(--subtitle-color);
-  font-size: 14px;
-  font-weight: 400;
 }
 
 .resume_wrap-content p {
-  color: var(--subtitle-color);
   font-size: 14px;
-  margin-top: 15px;
 }
 
 .resume_wrap:hover {
-  background-color: var(--main-color);
-  color: #faf9ff;
-}
-
-.resume_wrap:hover .resume_wrap-icon {
-  background-color: #fff;
-}
-
-.resume_wrap:hover .resume_wrap-icon i {
-  color: var(--main-color);
-}
-
-.resume_wrap:hover h4,
-.resume_wrap:hover span,
-.resume_wrap:hover p {
-  color: #fff;
+  background-color: #a9bce6c9;
+  color: black;
 }
 
 .progressBox {
@@ -569,21 +533,21 @@ header .container {
     display: none;
   }
 
+  .resume_content {
+    width: 100%;
+  }
+
   .resume_wrap {
     padding: 20px 15px;
   }
 }
 
-@media screen and (max-width: 576) {
+@media screen and (max-width: 576px) {
   .resume_wrap {
     text-align: center;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-  }
-
-  .resume_wrap .resume_wrap-icon {
-    margin-bottom: 15px;
   }
 
   .resume_wrap-content {
