--- a/style.css
+++ b/style.css
@@ -595,7 +595,7 @@ header .container {
   position: relative;
   overflow: hidden;
   z-index: 1;
-  height: 100%;
+  height: 250px;
 }
 
 .portfolio_wrap img {
@@ -647,7 +647,7 @@ header .container {
   justify-content: center;
   flex-direction: column;
   row-gap: 10px;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.6);
   transform: scale(0);
   transition: 0.4s;
   color: #333;
@@ -660,16 +660,21 @@ header .container {
 .portfolio_info h4 {
   font-size: 24px;
   color: #333;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 .portfolio_info p {
-  text-transform: uppercase;
+  font-weight: 400;
 }
 
 .portfolio_links a {
+  margin: 0 7px;
   font-size: 28px;
   color: #333;
+}
+
+.portfolio_links a:hover {
+  color: var(--main-color);
 }
 
 @media screen and (max-width: 992px) {
