--- a/style.css
+++ b/style.css
@@ -341,34 +341,6 @@ header .container {
   font-size: 20px;
 }
 
-.home_social {
-  display: flex;
-  column-gap: 20px;
-}
-
-.home_social a {
-  font-size: 22px;
-  display: inline-flex;
-  width: 50px;
-  height: 50px;
-  align-items: center;
-  justify-content: center;
-  background-color: #eee;
-  color: #333;
-  transition: 0.3s;
-  border-radius: 50%;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
-
-.home_social a:hover {
-  color: var(--main-color);
-  box-shadow: 0 0 10px var(--main-color);
-}
-
-.home_img {
-  text-align: right;
-}
-
 @media screen and (max-width: 768px) {
   .home_content h4 {
     font-size: 16px;
@@ -731,17 +703,26 @@ textarea {
   font-size: 16px;
 }
 
+textarea {
+  resize: none;
+}
+
 input:focus,
 textarea:focus {
   box-shadow: 0 0 5px #a8bbe0;
 }
 
 .contact_content .btn {
-  width: 185px;
-  margin-top: 20px;
+  margin: 20px auto 0 auto;
   display: flex;
   align-items: center;
   column-gap: 10px;
+  color: white;
+  cursor: pointer;
+}
+
+.contact_content .btn:hover {
+  color: black;
 }
 
 @media screen and (max-width: 576px) {
