--- a/style.css
+++ b/style.css
@@ -736,7 +736,7 @@ textarea:focus {
 }
 
 .footer_bg {
-  background-color: var(--main-color);
+  background-color: #a9bce6c9;
   padding-top: 30px;
 }
 
@@ -746,7 +746,7 @@ textarea:focus {
 
 .main_footer {
   padding-bottom: 50px;
-  border-bottom: 1px solid rgb(219, 219, 219);
+
   display: flex;
   flex-direction: column;
   row-gap: 15px;
@@ -757,10 +757,11 @@ textarea:focus {
   display: flex;
   justify-content: center;
   column-gap: 20px;
+  transition: 0.5s;
 }
 
 .footer_social a {
-  background-color: #fff;
+  background-color: transparent;
   color: var(--title-color);
   width: 50px;
   height: 50px;
@@ -769,13 +770,18 @@ textarea:focus {
   justify-content: center;
   align-items: center;
   font-size: 20px;
+  transition: 0.5s;
 }
 
 .footer_social a:hover {
-  background-color: var(--seconde-color);
+  transform: scale(1.5);
+}
+
+.footer_social a i {
+  font-size: 30px;
 }
 
 .footer_copy {
   padding: 20px 0;
-  color: #dbdbdb;
+  color: #fff;
 }
